Clear style-debt allowlist for tests and integration code.
Replace lambdas and Future.get with anonymous types and latches; mask
string literals in ContributingStyleGuardSupport to avoid false positives.